<resources>
    <string name="app_name">Labo3Tarea</string>
    <string name="name">Nombre:</string>
    <string name="password">Contraseña:</string>
    <string name="email">Email:</string>
    <string name="gender">Genero:</string>
    <string name="male">Masculino</string>
    <string name="female">Femenino</string>
    <string name="bt_send">Send</string>
    <string name="bt_share">Share</string>
</resources>
